--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "dompurify": "^3.1.7",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.22.2",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.27.0",
     "sass": "^1.71.1"
   },
   "devDependencies": {
